# debian-releases-rss

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml  update-feed.yml  update-uv-lock.yml
src/: generate_feed.py  state.json
tests/: test_generate_feed.py
